--- a/src/components/GalleryModal.astro
+++ b/src/components/GalleryModal.astro
@@ -6,7 +6,7 @@ const albumNames = ['Wohnhandwerk', 'Baumpflege', 'Terrassenbau']
 ---
 
 <div
-	class="absolute left-0 top-0 z-[1000] hidden h-full w-full bg-white p-2 xl:p-4"
+	class="absolute left-0 top-0 z-[100] hidden h-full w-full bg-white p-2 xl:p-4"
 	id="galleryModal"
 >
 	<div class="flex h-full flex-row gap-4">
@@ -27,7 +27,7 @@ const albumNames = ['Wohnhandwerk', 'Baumpflege', 'Terrassenbau']
 			</ul>
 
 			<button
-				class="text-1xl cursor-pointer border-none bg-none p-2 text-white hover:text-yellow-500"
+				class="text-1xl cursor-pointer border-none bg-none p-2 text-white hover:text-yellow-500 z-[110]"
 				id="galleryModalClose"
 			>
 				<Icon name="line-md:close" />
@@ -56,7 +56,6 @@ const albumNames = ['Wohnhandwerk', 'Baumpflege', 'Terrassenbau']
 		if (close) {
 			close.addEventListener('click', () => {
 				modal?.classList.toggle('hidden')
-				document.body.classList.remove('overflow-hidden')
 			})
 		}
 
@@ -74,14 +73,12 @@ const albumNames = ['Wohnhandwerk', 'Baumpflege', 'Terrassenbau']
 
 				item.classList.add('text-secondary')
 				galleryContents[index].classList.remove('hidden')
-				document.body.classList.add('overflow-hidden')
 				modal?.classList.add('block')
 			})
 		})
 
 		document.addEventListener('keydown', (event) => {
 			if (event.key === 'Escape' && modal?.classList.contains('block')) {
-				document.body.classList.remove('overflow-hidden')
 				modal?.classList.remove('block')
 			}
 		})
