--- a/src/layouts/multi.astro
+++ b/src/layouts/multi.astro
@@ -1,50 +1,35 @@
 ---
-import { getCollection } from 'astro:content'
-import type { INavigation } from '@/types/navigation'
 import Header from '@/components/Header.astro'
 import Footer from '@/components/Footer.astro'
 import GoBack from '@/components/GoBack.astro'
 import GalleryModal from '@/components/GalleryModal.astro'
+import { getNavigation } from '@/hooks/navigation'
 
 interface Props {
 	title: string
 }
 
 const { title } = Astro.props
-
-const pages = await getCollection('pages')
-
-const navigation: INavigation[] = pages.map(
-	(page: any): INavigation => ({
-		page: page,
-		title: page.data.title,
-		navigation: page.data.navigation,
-		slug: page.slug
-	})
-)
-
-const navigationHeader = navigation.filter((nav) => nav.navigation?.includes('Header'))
-const navigationFooter = navigation.filter((nav) => nav.navigation?.includes('Footer'))
+const { navigationHeader, navigationFooter } = await getNavigation()
 ---
 
 <!doctype html>
-<html lang="en" class="overflow-x-hidden h-full">
+<html lang="en" class="h-full w-full overflow-x-hidden">
 	<head>
 		<meta charset="UTF-8" />
 		<meta name="description" content="Astro description" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<meta name="generator" content={Astro.generator} />
 		<link rel="icon" type="image/svg+xml" href="/favicon-mode-dark.svg" />
-		<base href={import.meta.env.BASE_URL} />
 		<title>{title}</title>
 	</head>
-	<body class="flex flex-col overflow-x-hidden h-full">
+	<body class="flex h-full w-full flex-col overflow-x-hidden">
 		<Header navigation={navigationHeader} />
 		<main class="flex-1 overflow-y-auto scroll-smooth">
 			<slot />
 		</main>
-    <GoBack />
+		<GoBack />
 		<Footer navigation={navigationFooter} />
-    <GalleryModal />
+		<GalleryModal />
 	</body>
 </html>
