--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -16,7 +16,7 @@ const year = date.getFullYear()
 			navigation.map((item) => {
 				return (
 					<li class="pl-0">
-						<a href={'/'+item.title} data-href={item.title} aria-current="page">
+						<a href={item.title} data-href={item.title} aria-current="page">
 							{item.title}
 						</a>
 					</li>
