--- a/src/layouts/single.astro
+++ b/src/layouts/single.astro
@@ -14,7 +14,7 @@ const { navigationHeader, navigationFooter } = await getNavigation()
 ---
 
 <!doctype html>
-<html lang="en" class="h-full w-full overflow-x-hidden">
+<html lang="de" class="h-full w-full overflow-x-hidden">
 	<head>
 		<meta charset="UTF-8" />
 		<meta name="description" content="Astro description" />
