--- a/src/layouts/single.astro
+++ b/src/layouts/single.astro
@@ -21,6 +21,7 @@ const { navigationHeader, navigationFooter } = await getNavigation()
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<meta name="generator" content={Astro.generator} />
 		<link rel="icon" type="image/svg+xml" href="/favicon-mode-dark.svg" />
+		<link rel="sitemap" href="/sitemap-index.xml" />
 		<title>{title}</title>
 	</head>
 	<body class="flex h-full w-full flex-col overflow-x-hidden">
