--- a/src/components/Carousel.astro
+++ b/src/components/Carousel.astro
@@ -22,7 +22,7 @@ const imagePaths = shuffleArray(Object.keys(images))
 					let image = images[imagePath]()
 					return (
 						<li class="relative mr-2.5 h-[300px] w-[400px] overflow-hidden">
-							<a class="block h-full w-full pr-8 hover:cursor-pointer">
+							<a class="block h-full w-full pr-8 hover:cursor-pointer" aria-label="Gallery Image">
 								<Image
 									src={image}
 									alt={'altText'}
