--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -13,7 +13,7 @@ const { navigation } = Astro.props
 <header
 	class="top-0 bottom-0 z-50 flex h-16 sm:h-24 w-full align-middle items-center justify-between bg-primary px-6 sm:px-12 md:px-16"
 >
-	<a href="https://eckwerkstuttgart.de/" class="z-50 text-3xl sm:text-5xl no-underline">
+	<a href="https://eckwerkstuttgart.de/" class="z-50 text-3xl sm:text-5xl no-underline" aria-label="Eckwerk Stuttgart">
 		<Icon name="logo" />
 	</a>
 
