--- a/src/layouts/multi.astro
+++ b/src/layouts/multi.astro
@@ -17,7 +17,10 @@ const { navigationHeader, navigationFooter } = await getNavigation()
 <html lang="de" class="h-full w-full overflow-x-hidden">
 	<head>
 		<meta charset="UTF-8" />
-		<meta name="description" content="Astro description" />
+		<meta
+			name="description"
+			content="Ihr Partner für Wohnhandwerk, Baumpflege und Terrassenbau in Stuttgart. Wir bieten professionelle Dienstleistungen rund ums Haus und Garten. Kontaktieren Sie uns für individuelle Beratung und Angebote."
+		/>
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<meta name="generator" content={Astro.generator} />
 		<link rel="icon" type="image/svg+xml" href="/favicon-mode-dark.svg" />
