--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -34,8 +34,8 @@ const year = date.getFullYear()
 		<p>Stierlenstraße 25</p>
 		<p>70327 Stuttgart</p>
 		<p>
-			Mail: <a class="text-white" href="mailto:hallo@eckwerkstuttgart.de" aria-label="E-Mail"
-				>hallo@eckwerkstuttgart.de</a
+			Mail: <a class="text-white" href="mailto:kontakt@eckwerkstuttgart.de" aria-label="E-Mail"
+				>kontakt@eckwerkstuttgart.de</a
 			>
 		</p>
 		<br />
