remove 'Terrassenbau' from album names in GalleryModal

--- a/src/components/GalleryModal.astro
+++ b/src/components/GalleryModal.astro
@@ -2,7 +2,7 @@
 import { Icon } from 'astro-icon/components'
 import Gallery from './Gallery.astro'
 
-const albumNames = ['Wohnhandwerk', 'Baumpflege', 'Terrassenbau']
+const albumNames = ['Wohnhandwerk', 'Baumpflege']
 ---
 
 <div
